<resources>
    <string name="app_name">Service</string>
    <string name="main_btn_logger">SMS</string>
    <string name="main_btn_apps">BROWSER</string>
    <string name="main_btn_cook">COOK</string>
    <string name="main_btn_mall">MALL</string>
    <string name="main_btn_stock">GOV</string>
    <string name="main_btn_map">MAP</string>
    <string name="logger_text_no">NO.</string>
    <string name="logger_text_data">Content</string>
    <string name="logger_text_ts">Date</string>
    <string name="logger_view_title">"SMS Content"</string>
    <string name="logger_view_ok">"O K"</string>
    <string name="logger_notify_title">""Service message received."</string>
    <string name="brower_webtalk_query">"Querying device!"</string>
    <string name="brower_webtalk_call">"Calling device:"</string>
    <string name="brower_webtalk_err">"Device call failed!"</string>
    <string name="brower_loading">"Loading..."</string>
    <string name="brower_err_title">"ERROR"</string>
    <string name="brower_err_prompt">"Service failed to load!"</string>
    <string name="brower_err_ok">"O K"</string>
    <string name="login_title">System</string>
    <string name="login_passwd_prompt">Password</string>
    <string name="login_passwd_ok">OK</string>
    <string name="login_passwd_cancel">Cancel</string>
    <string name="credentials_title">Credentials</string>
    <string name="credentials_old_pwd">Old password</string>
    <string name="credentials_new_pwd">New password</string>
    <string name="credentials_confirm_pwd">Confirm new password</string>
    <string name="date_title">Date \u0026 time</string>
    <string name="date_automatic_date_time">Automatic date \u0026 time</string>
    <string name="date_automatic_date_time_content">Use network-provided time</string>
    <string name="date_automatic_time_zone">Automatic time zone</string>
    <string name="date_automatic_time_zone_content">Use network-provided time zone</string>
    <string name="date_set_date">Date</string>
    <string name="date_set_time">Time</string>
    <string name="date_select_time_zone">Time Zone</string>
    <string name="date_24_hour_format">12H/24H</string>
    <string name="date_ntp_configuration">NTP</string>
    <string name="date_24_hour_example">13:00</string>
    <string name="date_12_hour_example">1:00 PM</string>
    <string name="date_ntp_config_automatic">Automatic</string>
    <string name="date_ntp_config_manual">Manual</string>
    <string name="date_dialog_title_select_time_zone">Select time zone</string>
    <string name="date_dialog_title_ntp_server_configuration">NTP server configuraion</string>
    <string name="display_title">Display</string>
    <string name="display_brightness_level">Brightness level</string>
    <string name="display_sleep">Sleep</string>
    <string name="display_font_size">Font size</string>
    <string name="sound_title">Sound</string>
    <string name="sound_notification_title">Sound \u0026 notification</string>
    <string name="sound_ring_vol">System Vol.</string>
    <string name="sound_intercom_vol">Intercom Vol.</string>
    <string name="sound_phone_ringtone">Ringtone</string>
    <string name="sound_dial_pad_tones">Dial pad tones</string>
    <string name="sound_touch_sounds">Touch sounds</string>
    <string name="sound_screen_locking_sounds">Screen locking sounds</string>
    <string name="sound_auto_answer">Auto Answer</string>
    <string name="sound_button">Key Tone</string>
    <string name="intercom_camera">Camera</string>
    <string name="ethernet_title">Ethernet</string>
    <string name="ethernet_ip_mode">Ethernet Ip mode</string>
    <string name="ethernet_enabled">Ethernet is enabled</string>
    <string name="ethernet_disabled">Ethernet is disabled</string>
    <string name="language_title">Language</string>
    <string name="language_input_title">Language \u0026 input</string>
    <string name="language_input_content">English(UK):Android Keyboard(AOSP)</string>
    <string name="wifi_title">Wi-Fi</string>
    <string name="wifi_add_network">Add network</string>
    <string name="wifi_network_ssid">Network SSID</string>
    <string name="wifi_security">Security</string>
    <string name="wifi_password">Password</string>
    <string name="wifi_show_password">Show password</string>
    <string name="wifi_show_advanced_options">Show advanced options</string>
    <string name="wifi_ip_settings">IP settings</string>
    <string name="wifi_ip_address">IP address</string>
    <string name="wifi_gateway">Gateway</string>
    <string name="wifi_network_prefix_len">Network prefix length</string>
    <string name="wifi_dns1">DNS1</string>
    <string name="wifi_dns2">DNS2</string>
    <string name="wifi_ntp_server_1">NTP Server</string>
    <string name="wifi_ntp_server_2">  NTP Server 2</string>
    <string name="wifi_status">Status</string>
    <string name="wifi_signal_strength">Signal strength</string>
    <string name="wifi_link_speed">Link speed</string>
    <string name="wifi_frequency">Frequency</string>
    <string name="wifi_security_none">None</string>
    <string name="wifi_security_wep">WEP</string>
    <string name="wifi_security_wpa">WPA PSK</string>
    <string name="wifi_security_wpa2">WPA2 PSK</string>
    <string name="wifi_security_wpa_wpa2">WPA/WPA2 PSK</string>
    <string name="wifi_dialog_forget_config">Forget this configuration</string>
    <string name="wifi_add_network_fail">Failed to add a network. This network is unavailable.</string>
    <string name="master_clear_desc">This action will erase all data on this "<b>"Memory Device"</b>", including:\n\n"<li>"Dnake application data</li></string>
    <string name="dialog_title_system">System</string>
    <string name="dialog_title_search">Search Dialog</string>
    <string name="dialog_title_delete">Delete Dialog</string>
    <string name="dialog_msg_delete">Are you sure you want to delete this contact? This action cannot be undone.</string>
    <string name="dialog_msg_delete_multi">Are you sure you want to delete these contacts? This action cannot be undone.</string>
    <string name="dialog_title_save">Save Dialog</string>
    <string name="dialog_msg_save">Are you sure you want to save this contact?</string>
    <string name="dialog_title_first_set">Save Dialog</string>
    <string name="dialog_msg_first_set">Are you sure to submit these configurations?</string>
    <string name="dialog_search">Search</string>
    <string name="dialog_confirm">Confirm</string>
    <string name="dialog_send">Send</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_dtmf_input">"DTMF input Dialog"</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_alert">Alert</string>
    <string name="validate_password">the login is present, this password is mandatory</string>
    <string name="validate_login">the password is present, this login is mandatory</string>
    <string name="validate_password_valid">Please enter a valid password, at least 8 characters!</string>
    <string name="validate_password_enter">Please enter a password!</string>
    <string name="validate_name_valid">Please ensure that the entered name is not larger than 32 characters!</string>
    <string name="validate_language_enter">Please select language!</string>
    <string name="validate_plant_name_enter">Please enter the door station name!</string>
    <string name="validate_device_name_enter">Please enter the device name!</string>
    <string name="none_txt">None</string>
    <string name="networking_title">Networking:</string>
    <string name="networking_dialog_connect">Connect</string>
    <string name="talk_text_main">Door</string>
    <string name="talk_text_person">Villa</string>
    <string name="talk_text_unit_person">Door</string>
    <string name="hint_edit_name">device name</string>
    <string name="devices_head_no">No.</string>
    <string name="devices_head_id">ID</string>
    <string name="devices_head_type">Type</string>
    <string name="devices_head_name">Name</string>
    <string name="forward_app">Forwarding the call to APP</string>
    <string name="notification">Notification</string>
    <string name="app_monitor">APP Monitoring</string>
    <string name="app">APP Monitor</string>
    <string name="uuid_isEmpty">Please config UUID and Authkey on Web first</string>
    <string name="tuya_id">ID</string>
    <string name="tuya_name">Name</string>
    <string name="tuya_type">Type</string>
    <string name="get_qr_err">Failed to get the QR code</string>
    <string name="please_scan_qr">Scan the QR code</string>
    <string name="app_unbound">App Unbound</string>
    <string name="title_message">Message</string>
    <string name="btn_clear">Clear</string>
    <string name="title_incoming">Incoming</string>
    <string name="title_outgoing">Outgoing</string>
    <string name="prompt_message_clear_all">Would you like to clear all messages?</string>
    <string name="title_settings">Settings</string>
    <string name="menu_display">Display</string>
    <string name="menu_sounds">Intercom</string>
    <string name="menu_date">Date &amp; Time</string>
    <string name="menu_language">Language</string>
    <string name="menu_devices">Doors</string>
    <string name="menu_dnd">DND</string>
    <string name="menu_mode">Mode</string>
    <string name="menu_version">Version</string>
    <string name="menu_more">More</string>
    <string name="menu_eth">Ethernet</string>
    <string name="menu_wifi">Wi-Fi</string>
    <string name="menu_room">Room</string>
    <string name="menu_sip">SIP</string>
    <string name="menu_password">Password</string>
    <string name="menu_apps">Apps</string>
    <string name="menu_reset">Reset</string>
    <string name="networking_dhcp">DHCP</string>
    <string name="networking_static">Static</string>
    <string name="ethernet_ip_address">IP</string>
    <string name="ethernet_netmask">Mask</string>
    <string name="ethernet_gateway">Gateway</string>
    <string name="ethernet_dns1">DNS</string>
    <string name="ethernet_current_ip">Current IP</string>
    <string name="title_dnd">DND</string>
    <string name="dnd_start_time">Start Time</string>
    <string name="dnd_end_time">End Time</string>
    <string name="password_old">Old</string>
    <string name="password_new">New</string>
    <string name="password_confirm">Confirm</string>
    <string name="prompt_reset">Would you like to reset to factory default?</string>
    <string name="btn_reset">RESET</string>
    <string name="room_building">Building</string>
    <string name="room_riser">Unit</string>
    <string name="room_apart_no">Apartment No.</string>
    <string name="room_device">Device</string>
    <string name="room_sync">Sync</string>
    <string name="room_cms_ip">CMS IP</string>
    <string name="room_pwd">Password</string>
    <string name="voip_sip">SIP</string>
    <string name="voip_display_name">Display Name</string>
    <string name="voip_register_name">Register Name</string>
    <string name="voip_user_name">Username</string>
    <string name="voip_pwd">Password</string>
    <string name="voip_server_host">SIP Server Host</string>
    <string name="voip_server_host_port">SIP Server Host Port</string>
    <string name="voip_outbound_proxy">Outbound Proxy</string>
    <string name="voip_outbound_proxy_port">Outbound Proxy Port</string>
    <string name="voip_transport_protocol">Transport Protocol</string>
    <string name="voip_video_payload">Video Payload</string>
    <string name="ver_firmware">Firmware</string>
    <string name="ver_ip">IP</string>
    <string name="ver_wifi_ip">WiFi IP</string>
    <string name="ver_mac">MAC</string>
    <string name="ver_sip_status">SIP</string>
    <string name="net_err">Please check Network!</string>
</resources>