<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_main"
    android:layout_width="match_parent"
    android:layout_height="64dp"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:paddingLeft="10dp">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.5"
        android:gravity="center"
        android:text="@string/devices_head_no"
        android:textColor="@color/white"
        android:textSize="22sp" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="center"
        android:text="@string/devices_head_id"
        android:textColor="@color/white"
        android:textSize="22sp" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:gravity="center"
        android:text="@string/devices_head_type"
        android:textColor="@color/white"
        android:textSize="22sp" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:gravity="center"
        android:text="@string/devices_head_name"
        android:textColor="@color/white"
        android:textSize="22sp" />
</LinearLayout>