<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/layout_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:padding="24dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/master_clear_desc"
            android:textColor="@color/white"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_popup_confirm"
        android:layout_width="match_parent"
        android:layout_height="360dp"
        android:layout_centerInParent="true"
        android:layout_marginLeft="120dp"
        android:layout_marginRight="120dp"
        android:background="@drawable/shape_layout_24_white"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/prompt_reset"
            android:textColor="@color/white"
            android:textSize="28sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/dialog_cancel"
                android:textColor="@color/white"
                android:textSize="28sp" />

            <View
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:background="@color/white" />

            <TextView
                android:id="@+id/btn_confirm"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/dialog_confirm"
                android:textColor="@color/white"
                android:textSize="28sp" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/btn_reset"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/layout_desc"
        android:background="@drawable/shape_layout_24_white_no_stroke"
        android:gravity="center"
        android:padding="12dp"
        android:layout_marginTop="72dp"
        android:text="@string/btn_reset"
        android:textSize="24sp" />
</RelativeLayout>