<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_layout_24"
        android:orientation="vertical">

        <com.dnake.widget.SettingsItemLayout
            android:id="@+id/layout_auto_date_time"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            app:arrow_visible="false"
            app:content_text_visible="true"
            app:switch_btn_visible="true"
            app:title_text="@string/date_automatic_date_time" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@color/white" />

        <com.dnake.widget.SettingsItemLayout
            android:id="@+id/layout_set_date"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            app:content_text_visible="true"
            app:switch_btn_visible="false"
            app:title_text="@string/date_set_date" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@color/white" />

        <com.dnake.widget.SettingsItemLayout
            android:id="@+id/layout_set_time"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            app:content_text_visible="true"
            app:switch_btn_visible="false"
            app:title_text="@string/date_set_time" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@color/white" />

        <com.dnake.widget.SettingsItemLayout
            android:id="@+id/layout_select_zone"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            app:content_text_visible="true"
            app:switch_btn_visible="false"
            app:title_text="@string/date_select_time_zone" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@color/white" />

        <com.dnake.widget.SettingsItemLayout
            android:id="@+id/layout_format_24"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            app:arrow_visible="false"
            app:content_text_visible="true"
            app:switch_btn_visible="true"
            app:title_text="@string/date_24_hour_format" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Date Format"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="xxxxxxxxxx"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@color/white"
            android:visibility="gone" />

        <com.dnake.widget.SettingsItemLayout
            android:id="@+id/layout_ntp_config"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            app:arrow_visible="false"
            app:content_text_visible="true"
            app:switch_btn_visible="true"
            app:title_text="@string/date_ntp_configuration" />
    </LinearLayout>
</ScrollView>